--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".SignInActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".GraphActivity"></activity>
+        <activity android:name=".GraphActivity" />
+        <activity android:name=".VisualisationActivity"></activity>
     </application>
 
 </manifest>
